Design alignment fixing
WIP #1832

--- a/src/components/common/Common.module.css
+++ b/src/components/common/Common.module.css
@@ -10,6 +10,7 @@
 
 .lineHeight33 {
     line-height: 33px;
+    padding-right: 0 !important;
 }
 
 .txtEllipsis {
@@ -44,7 +45,7 @@
 
 .contentHeaderBackground {
     background-color: #f4f4f4;
-    padding: 10px;
+    padding: 10px !important;
     margin-bottom: 20px;
     border-radius: 7px;
 }
@@ -1140,6 +1141,10 @@
     display: flex;
     justify-content: flex-end;
     margin-bottom: 0px !important;
+}
+
+.addGroup button:first-child {
+    margin-left: 0;
 }
 
 /* .content { */
